; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs-opengl/extr_gl-shader.c_validate_param.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs-opengl/extr_gl-shader.c_validate_param.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.program_param = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__, i32 }
%struct.TYPE_3__ = type { i64 }

@LOG_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [51 x i8] c"Parameter '%s' set to invalid size %u, expected %u\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.program_param*, i64)* @validate_param to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @validate_param(%struct.program_param* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.program_param*, align 8
  %5 = alloca i64, align 8
  store %struct.program_param* %0, %struct.program_param** %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = load %struct.program_param*, %struct.program_param** %4, align 8
  %7 = getelementptr inbounds %struct.program_param, %struct.program_param* %6, i32 0, i32 0
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* %5, align 8
  %13 = icmp ne i64 %11, %12
  br i1 %13, label %14, label %31

14:                                               ; preds = %2
  %15 = load i32, i32* @LOG_ERROR, align 4
  %16 = load %struct.program_param*, %struct.program_param** %4, align 8
  %17 = getelementptr inbounds %struct.program_param, %struct.program_param* %16, i32 0, i32 0
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 8
  %21 = load %struct.program_param*, %struct.program_param** %4, align 8
  %22 = getelementptr inbounds %struct.program_param, %struct.program_param* %21, i32 0, i32 0
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = trunc i64 %26 to i32
  %28 = load i64, i64* %5, align 8
  %29 = trunc i64 %28 to i32
  %30 = call i32 @blog(i32 %15, i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str, i64 0, i64 0), i32 %20, i32 %27, i32 %29)
  store i32 0, i32* %3, align 4
  br label %32

31:                                               ; preds = %2
  store i32 1, i32* %3, align 4
  br label %32

32:                                               ; preds = %31, %14
  %33 = load i32, i32* %3, align 4
  ret i32 %33
}

declare dso_local i32 @blog(i32, i8*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
